# recorder

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  Makefile.am  README  autogen.sh  configure.ac
CMake/: FindHDF5.cmake
benchmark/: localrecord.py  statusgui.py  test.py
benchmarks/: CMakeLists.txt  h5experiment_writer.cc
dbustest/: README  experiment.py  test_experiment.py  test_recorder.py
debian/: changelog  control  copyright  rules
docs/: README  dbus.manager.txt  design.txt  design_and_dbus.txt  epoch-introspect.xml  experiment-introspect.xml  fileinterface.txt  h5all.new.txt  h5epoch.txt  h5fileformat.txt  h5filerecorder.txt  logging.txt  manager-introspect.xml  soma-experiment-management.rst  tspiketable.txt
docs/old/: dataformat.txt
docs/pydbustest/: example-client.py  example-service.py  notes.txt  recorder.py
docs/pytest/: datatab.py  epoch-property.glade  epoch.py  experiment-property.glade  experiment.py  main.glade  notes.py  notesgui.py  recorder.py  run.py  treemodel.py
experiment/: CMakeLists.txt  Makefile  cachedtable.h  dbusepoch.cc  dbusepoch.h  dbusepochadaptor.h  dbusexperiment.cc  dbusexperiment.h  dbusexperimentadaptor.h  dbusrecorder.cc  dbusrecorderadaptor.h  dbusrecorderproxy.h  eventmaskset.cc  eventtable.cc  experiment-introspect.xml  experiment.h  gen_dbus.sh  h5epoch.cc  h5experiment.cc  h5experiment.h  h5helper.h  notetable.h  recorder-glue.h  recordermain.cc  tspiketable.cc
libs/: dbus.txt
libs/dbus-c++/: Makefile  Makefile.in  aclocal.m4  config.status  configure  dbus-c++-1.pc  libtool
libs/dbus-c++/autom4te.cache/: output.0  requests  traces.0
libs/dbus-c++/data/: Makefile  Makefile.in
libs/dbus-c++/doc/: Makefile  Makefile.in
libs/dbus-c++/examples/: Makefile  Makefile.in
libs/dbus-c++/examples/echo/: Makefile  Makefile.in  echo-client-glue.h  echo-client-mt  echo-glue.h  echo-server  echo-server-glue.h
libs/dbus-c++/examples/echo/.deps/: echo-client.Po  echo-server.Po
libs/dbus-c++/examples/echo/.libs/: echo-client-mt  echo-server
libs/dbus-c++/examples/glib/: Makefile  Makefile.in  dbus-browser  dbus-browser.cpp  dbus-glue.h
libs/dbus-c++/examples/glib/.deps/: dbus-browser.Po
libs/dbus-c++/examples/glib/.libs/: dbus-browser
libs/dbus-c++/examples/hal/: Makefile  Makefile.in  hal-listen
libs/dbus-c++/examples/hal/.deps/: hal-listen.Po
libs/dbus-c++/examples/hal/.libs/: hal-listen
libs/dbus-c++/examples/properties/: Makefile  Makefile.in  props-glue.h  props-server
libs/dbus-c++/examples/properties/.deps/: props-server.Po
libs/dbus-c++/examples/properties/.libs/: props-server
libs/dbus-c++/include/dbus-c++/: config.h
libs/dbus-c++/src/: Makefile  Makefile.in  interface.cpp
libs/dbus-c++/src/.deps/: connection.Plo  debug.Plo  dispatcher.Plo  error.Plo  eventloop.Plo  glib-integration.Plo  interface.Plo  introspection.Plo  message.Plo  object.Plo  pendingcall.Plo  property.Plo  server.Plo  types.Plo  xml.Plo
libs/dbus-c++/src/.libs/: libdbus-c++-1.lai  libdbus-c++-1.so.0.0.0
libs/dbus-c++/tools/: Makefile  Makefile.in  dbusxx-introspect  dbusxx-xml2cpp
libs/dbus-c++/tools/.deps/: introspect.Po  xml2cpp.Po
libs/dbus-c++/tools/.libs/: dbusxx-introspect  dbusxx-xml2cpp
manager/: CMakeLists.txt  soma-recorder-manager
soma_apps/: CMakeFiles.txt  CMakeLists.txt
soma_apps/recorder/: __init__.py  manager.py
src/: CMakeLists.txt  Makefile  Makefile.am  datasetio.h  dbusepoch.cc  dbusepoch.h  dbusexperiment.cc  dbusexperiment.h  dbusexperimentadaptor.h  dbusrecorder.cc  dbusrecorder.h  dbusrecorderadaptor.h  dbusrecordermanager.cc  dbusrecordermanager.h  dbusrecorderproxy.cc  dbusrecorderproxy.h  epoch-introspect.xml  epoch.h  epochinterface.h  eventmaskset.h  eventtable.cc  eventtable.h  experiment.h  experimentmain.cc  fileinterface.h  h5epoch.cc  h5epoch.h  h5experiment.cc  h5experiment.h  h5fileinterface.cc  h5fileinterface.h  h5filerecorder.cc  h5filerecorder.h  note.h  noteinterface.h  notetable.cc  recorder-glue.h  recorder-introspect.xml  recorder.cc  recorder.h  (+8 more)
test/: Makefile  README  benchanalyze.py  compound  compound.cc  h5filerecorderbench.cc  tspike.h
test/dbusexperiment/: README  canonical_data.py  dbusserver.py  test_epoch.py  test_experiment.py  test_recorder.py
test/recordermanager/: test.py
tests/: CMakeLists.txt  EventMaskSet_test.cc  EventTable_test.cc  EventTable_test.py  H5Epoch_appenddata.cc  H5Epoch_appenddata.py  H5Epoch_test.cc  H5Epoch_test.py  H5Experiment.cc  H5Experiment.py  H5Experiment_recording.cc  H5Experiment_recording.py  H5FileCreate.cc  Makefile  NoteTable_test.cc  NoteTable_test.py  README  TSpikeTable_test.cc  TSpikeTable_test.py  WaveTable_test.cc  WaveTable_test.py  recorder_test.cc  simpletest.cc  simpletest.py  test_config.h.in  test_util.cc  test_util.h  tspiketabletest.py
tests/dbus/: CMakeLists.txt  canonical_data.py  recorder_test_config.py  runtests.py.in  test_epoch.py  test_experiment.py  test_recorder.py
tools/: dcontrol.py  dstatus.py
unittest/: CMakeLists.txt  EventMaskSet_test.cc  EventTable.cc  EventTable_test.cc  EventTable_test.py  H5Epoch.cc  H5Epoch_appenddata.cc  H5Epoch_appenddata.py  H5Epoch_test.cc  H5Epoch_test.py  H5Experiment.cc  H5Experiment_recording.cc  H5Experiment_recording.py  H5FileCreate.cc  H5FileInterface_create.cc  H5FileInterface_samplefile.cc  H5FileRecorder_create.cc  H5FileRecorder_create.py  Makefile  Makefile.am  NoteTable.cc  NoteTable_test.cc  TSpikeTable.cc  TSpikeTable_test.cc  TSpikeTable_test.py  WaveTable.cc  WaveTable_test.cc  WaveTable_test.py  allrunner.cc  pttest.py  pytest.py  recorder_test.py  runner.cc  test.h5  tspiketable_test.cc  wavetable_test.cc
unittest/dbus/: dbusserver.py  test_recorder.py
